# CodeChallengeMaker

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
CodeChallengeMaker/: CMakeLists.txt
CodeChallengeMaker/resources/: qt_resources.qrc  win_icon.rc
CodeChallengeMaker/src/: AppConfig.cpp  AppConfig.h  IconCache.cpp  IconCache.h  MetatypeDeclarations.h  OldQtVersionFixes.h  SettingsManager.cpp  SettingsManager.h  StringConversion.h  main.cpp
CodeChallengeMaker/src/ui/: CodeChallengeMaker.cpp  CodeChallengeMaker.h  CodeChallengeMaker.ui  CodeEditor.cpp  CodeEditor.h  StyleFusionDark.h
cmake/: BuildTypes.cmake  CompilerSetup.cmake  DLLFunctions.cmake  FileFunctions.cmake  GlobalCompilerSetup.cmake  OsSetup.cmake  PolicySetup.cmake  SystemFunctions.cmake  UseQt5Modules.cmake  VariableFunctions.cmake
example/ExamplePlugin/: CMakeLists.txt
example/ExamplePlugin/resources/: descriptionFile.txt  inputFile.txt  qt_resources.qrc.in
example/ExamplePlugin/src/: ChallengePlugin.cpp  ChallengePlugin.h
libs/common/: CMakeLists.txt
libs/common/src/: ErrorCode.h  FilesystemUtils.cpp  FilesystemUtils.h  NumberTypes.h  RetVal.h  Utils.cpp  Utils.h
libs/iplugin/: CMakeLists.txt  IChallengePlugin.h
libs/platform/: CMakeLists.txt  ErrnoGuard.cpp  ErrnoGuard.h  Globals.h  SystemTraits.cpp  SystemTraits.h
libs/platform/compiler/: ClangCompiler.cpp  ClangCompiler.h  GCCCompiler.cpp  GCCCompiler.h  MSVCCompiler.cpp  MSVCCompiler.h
libs/platform/os/: LinuxPlatform.cpp  LinuxPlatform.h  WindowsPlatform.cpp  WindowsPlatform.h
